# designit

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: requirements.md  todo.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: designit.tmLanguage.json
examples/banking/: accounts.dit  context.dit  main.dit  transactions.dit
src/designit/: __init__.py  cli.py
src/designit/generators/: __init__.py  graphviz.py  markdown.py  mermaid.py
src/designit/grammar/: __init__.py  designit.lark
src/designit/lsp/: __init__.py  server.py
src/designit/model/: __init__.py  base.py  datadict.py  dfd.py  erd.py  scd.py  std.py  structure.py
src/designit/parser/: __init__.py  ast_nodes.py  parser.py
src/designit/semantic/: aggregator.py  analyzer.py  resolver.py  validator.py
tests/: __init__.py  test_aggregator.py  test_cli.py  test_doc.py  test_examples.py  test_flow_unions.py  test_generators.py  test_lsp.py  test_parser.py  test_semantic.py
tests/fixtures/: simple.dit
vscode-extension/: .vscodeignore  LICENSE  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: designit.tmLanguage.json
